# ChangeLog for kde-base/kig
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/kig/ChangeLog,v 1.155 2010/03/31 22:42:07 spatz Exp $

  31 Mar 2010; Dror Levin <spatz@gentoo.org> -kig-4.3.4.ebuild,
  -kig-4.4.0.ebuild:
  Remove old KDE versions.

*kig-4.4.2 (30 Mar 2010)

  30 Mar 2010; Dror Levin <spatz@gentoo.org> +kig-4.4.2.ebuild:
  Version bump

  11 Mar 2010; Brent Baude <ranger@gentoo.org> kig-4.3.5.ebuild:
  Marking kig-4.3.5 ppc stable for bug 300393

*kig-4.4.1 (02 Mar 2010)

  02 Mar 2010; Theo Chatzimichos <tampakrap@gentoo.org> +kig-4.4.1.ebuild:
  Version bump

  20 Feb 2010; Samuli Suominen <ssuominen@gentoo.org> kig-4.3.5.ebuild:
  amd64/x86 stable wrt #300393

*kig-4.4.0 (08 Feb 2010)

  08 Feb 2010; Alexey Shvetsov <alexxy@gentoo.org> +kig-4.4.0.ebuild:
  Version bump to KDE SC 4.4.0

*kig-4.3.5 (25 Jan 2010)

  25 Jan 2010; Tomáš Chvátal <scarabeus@gentoo.org> +kig-4.3.5.ebuild:
  Version bump

  23 Jan 2010; Jonathan Callen <abcd@gentoo.org> kig-4.3.4.ebuild:
  Keyword ~amd64-linux/~x86-linux

  19 Jan 2010; Jeroen Roovers <jer@gentoo.org> kig-4.3.3.ebuild:
  Stable for HPPA too.

  23 Dec 2009; Jonathan Callen <abcd@gentoo.org> kig-4.3.4.ebuild:
  Pull in changes from overlay

  10 Dec 2009; Tomáš Chvátal <scarabeus@gentoo.org> -kig-4.3.1.ebuild:
  Drop KDE SC-4.3.1.

  10 Dec 2009; Christian Faulhammer <fauli@gentoo.org> kig-4.3.3.ebuild:
  x86 stable, bug 292455

*kig-4.3.4 (01 Dec 2009)

  01 Dec 2009; Alex Alexander <wired@gentoo.org> +kig-4.3.4.ebuild:
  Version bump

  30 Nov 2009; Joseph Jezak <josejx@gentoo.org> kig-4.3.3.ebuild:
  Marked ppc/ppc64 stable for bug #292455.

  29 Nov 2009; Raúl Porcel <armin76@gentoo.org> kig-4.3.3.ebuild:
  Add ~sparc

  29 Nov 2009; Samuli Suominen <ssuominen@gentoo.org> kig-4.3.3.ebuild:
  amd64 stable wrt #292455

  20 Nov 2009; Samuli Suominen <ssuominen@gentoo.org> -kig-3.5.10.ebuild:
  Remove KDE 3.5.10.
