@@ -1,0 +1,25 @@
+# Copyright 1999-2010 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kig/kig-4.4.3.ebuild,v 1.1 2010/05/03 20:54:15 alexxy Exp $
+
+EAPI="3"
+
+KMNAME="kdeedu"
+inherit kde4-meta
+
+DESCRIPTION="KDE Interactive Geometry tool"
+KEYWORDS="~alpha ~amd64 ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~amd64-linux ~x86-linux"
+IUSE="debug +handbook kig-scripting"
+
+DEPEND="
+	kig-scripting? ( >=dev-libs/boost-1.32 )
+"
+RDEPEND="${DEPEND}"
+
+src_configure() {
+	mycmakeargs=(
+		$(cmake-utils_use_with kig-scripting BoostPython)
+	)
+
+	kde4-meta_src_configure
+}
